@@ -1,5 +1,10 @@
 2009-06-01  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/ChartPanel.java
+    (mousePressed): Return immediately if chart is null.
+
+2009-06-01  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/plot/MultiplePiePlot.java
     (getLegendItems): Set the series key and index for each item,
     * source/org/jfree/chart/plot/SpiderWebPlot.java
